--- a/portfolio.html
+++ b/portfolio.html
@@ -80,14 +80,17 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
           <!-- Our product -->
 
           <ul class="list list-team-portfolio">
-            <li class="link">
+            <li class="link product-item">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   class=""
                   src="./images/gallery-2/img.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">
                     Banking App Interface Concept
@@ -96,7 +99,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link ">
               <a class="link shadow" href="">
                 <img
                   class=""
