--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
           <!-- Our product -->
 
           <ul class="list list-team-portfolio">
-            <li class="link product-item">
+            <li class="link">
               <a class="link shadow" href="">
                 <div class="product-wrapper">
                 <img
@@ -101,12 +101,15 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link ">
               <a class="link shadow" href="">
+                 <div class="product-wrapper">
                 <img
                   class=""
                   src="./images/gallery-2/img-1.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Cashless Payment</h2>
                   <p class="sub-text-progect">Marketing</p>
@@ -115,12 +118,15 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   class=""
                   src="./images/gallery-2/img-2.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Meditation App</h2>
                   <p class="sub-text-progect">App</p>
@@ -129,11 +135,14 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   src="./images/gallery-2/img-3.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Taxi Service</h2>
                   <p class="sub-text-progect">Marketing</p>
@@ -142,11 +151,14 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   src="./images/gallery-2/img-4.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Screen Illustrations</h2>
                   <p class="sub-text-progect">Design</p>
@@ -155,11 +167,14 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   src="./images/gallery-2/img-5.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Online Courses</h2>
                   <p class="sub-text-progect">Marketing</p>
@@ -168,11 +183,14 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link ">
               <a class="link shadow" href="">
+                 <div class="product-wrapper">
                 <img
                   src="./images/gallery-2/img-6.jpg"
                   alt="our product"
                   width="360"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Instagram Stories Concept</h2>
                   <p class="sub-text-progect">Design</p>
@@ -181,11 +199,14 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   src="./images/gallery-2/img-7.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Organic Food</h2>
                   <p class="sub-text-progect">Web Site</p>
@@ -194,11 +215,14 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             </li>
             <li class="link">
               <a class="link shadow" href="">
+                <div class="product-wrapper">
                 <img
                   src="./images/gallery-2/img-8.jpg"
                   alt="our product"
                   width="360"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-border">
                   <h2 class="progect-card-title">Fresh Coffee</h2>
                   <p class="sub-text-progect">Web Site</p>
