--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             >Web<span class="text-logo">Studio</span>
           </a>
           <ul class="list menu">
-            <li class="menu-items">
+            <li class="menu-items hover-studio">
               <a class="link menu-link" href="./index.html">Studio</a>
             </li>
             <li class="menu-items">
