--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
             <li class="menu-items">
               <a class="link menu-link" href="./">Studio</a>
             </li>
-            <li class="menu-items">
-              <a class="link menu-link" href="./portfolio.html">Portfolio</a>
+            <li class="menu-items hover-portfolio">
+              <a class="link menu-link " href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-items">
               <a class="link menu-link" href="">Contacts</a>
