--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
           </a>
           <ul class="list menu">
             <li class="menu-items hover-studio">
-              <a class="link menu-link" href="./index.html">Studio</a>
+              <a class="link menu-link current" href="./index.html">Studio</a>
             </li>
             <li class="menu-items">
               <a class="link menu-link" href="./portfolio.html">Portfolio</a>
