--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
               <a class="link menu-link" href="./">Studio</a>
             </li>
             <li class="menu-items hover-portfolio">
-              <a class="link menu-link " href="./portfolio.html">Portfolio</a>
+              <a class="link menu-link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-items">
               <a class="link menu-link" href="">Contacts</a>
