--- a/index.html
+++ b/index.html
@@ -425,13 +425,39 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn"data-modal-close>
           <svg class="modal-close-btn-icon">
             <use href="./images/sprite.svg#icon-close-btn"></use>
           </svg>
         </button>
+        <p>Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Name</span>
+            <input type="text" name="use_name" class="modal-form-input" required pattern="^[a-zA-Zа-яА-Я]+" minlength="3">
+            <svg>
+              <use href=></use>
+            </svg>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Phone</span>
+            <input type="tel" name="user_phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+            title="xxx-xxx-xx-xx">
+          </label>
+        <label class="modal-form-field">
+            <span class="modal-form-input-desc">Email</span>
+            <input type="email" name="user_email" class="modal-form-input" required pattern="^\S+@\S+\.\S+$">
+          </label>
+           <label class="modal-form-field">
+            <span class="modal-form-input-desc">Comment</span>
+            <textarea name="user-message" placeholder="Text input"></textarea>
+           </label>
+        <input id="user-policy" name="user-policy" type="checkbox" class="modal-form-check"> 
+           <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the <a href="">Privacy Policy</a> </label>
+           <button type="submit" class="modal-form-submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
