--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
            </label>
         <input id="user-policy" name="user-policy" type="checkbox" class="modal-form-check"> 
            <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the <a href="">Privacy Policy</a> </label>
-           <button type="submit" class="modal-form-submit">Send</button>
+           <button type="submit" class="modal-form-submit">Senyd</button>
         </form>
       </div>
     </div>
